--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,39 @@
+cachetools==5.2.0
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.1
+colorama==0.4.5
+cryptography==38.0.1
 docutils==0.19
+google-api-core==2.10.1
+google-api-python-client==2.63.0
+google-auth==2.12.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.56.4
+httplib2==0.20.4
 idna==3.3
 Kivy==2.1.0
 kivy-deps.angle==0.3.2
 kivy-deps.glew==0.3.1
 kivy-deps.sdl2==0.4.5
 Kivy-Garden==0.1.5
+oauth2client==4.1.3
+protobuf==4.21.7
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+PyDrive2==1.14.0
 Pygments==2.13.0
+pyOpenSSL==22.1.0
+pyparsing==3.0.9
 pypiwin32==223
 pywin32==304
+PyYAML==6.0
 requests==2.28.1
+rsa==4.9
+semantic-version==2.10.0
+setuptools-rust==1.5.2
+six==1.16.0
+typing_extensions==4.3.0
+uritemplate==4.1.1
 urllib3==1.26.12
